--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="text-center mt-4">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Si tienes alguna pregunta o algo de lo que informarnos, no dudes en contactar con nosotros para darte una solución o mejorar la experiencia de la comunidad.</p></div>
+                    <div class="text-center mt-4"><p class="lead">Si tienes alguna pregunta o algo de lo que informarnos, no dudes en contactar con nosotros para darte una solución o mejorar la experiencia de la comunidad.</p></div>
                 </div>
                 <!-- About Section Button-->
                  <!--<div class="text-center mt-4">
