--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
+                <div class="text-center mt-4">
+                    <div class="text-center mt-4"><p class="lead">Nuestro equipo de profesionales ofrece un amplio servicio de videojuegos únicos y emocionantes que entretendrán a cualquiera con varias horas de diversión sin límite</p></div>
+                </div>
+                <div class="text-center mt-4">
+                    <div class="text-center mt-4"><p class="lead">No importa si la intención es divertirse o educar, nosotros ofrecemos un ampio catálogo de opciones y múltiples ofertas tentadoras. ¡No te lo puedes perder!</p></div>
+                </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
                     <!-- Portfolio Item 1-->
@@ -134,6 +140,9 @@
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
+                <div class="text-center mt-4">
+                    <div class="text-center mt-4"><p class="lead">Desarrollamos juegos entretenidos y educativos</p></div>
+                </div>
                 <!-- About Section Content-->
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Empresa de vidoejuegos de calidad</p></div>
@@ -157,6 +166,9 @@
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
+                </div>
+                <div class="text-center mt-4">
+                    <div class="text-center mt-4"><p class="lead">Estos son los productos en los que hemos estado trabajando.</p></div>
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
@@ -323,9 +335,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/DanielAlvarez.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Portfolio_Mana_Rangers.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Un videojuego</p>
+                                    <p class="mb-4">Adéntrate en un mundo medieval en el que podrás derrotar enemigos en emocionantes niveles mediante el poder de los elementos.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -337,8 +349,6 @@
                 </div>
             </div>
         </div>
-
-        
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1" aria-hidden="true">
@@ -360,7 +370,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/DanielAlvarez.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Programador empedernido cno una gran inteligencia lógica que le ayuda a desemvolverse bien en el ámbito de la proogramación. También es un buen apoyo moral para el equipo y los ayuda a sentirse mejor para aumentar su productividad.</p>
+                                    <p class="mb-4">Soy un apasionado desarrollador de software con experiencia en la creación de soluciones técnicas innovadoras y efectivas. Mi enfoque se centra en la programación, la resolución de problemas y la mejora continua.</p>
+                                    <p class="mb-4">Experiencia: programación avanzada, desarrollo web, gestión de base de datos y automatización y scripts</p>
+                                    <p class="mb-4">Correo: d.alvarez.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
