--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Sobre nosotros</h2>
+                <h3 class="page-section-heading text-center text-uppercase text-secondary mb-0">Empresa de diseño y desarrollo de videojuegos de gran calidad y para toda la familia.</h3>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -69,6 +70,9 @@
                 </div>
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">No importa si la intención es divertirse o educar, nosotros ofrecemos un ampio catálogo de opciones y múltiples ofertas tentadoras. ¡No te lo puedes perder!</p></div>
+                </div>
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
@@ -140,12 +144,9 @@
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <div class="text-center mt-4">
-                    <div class="text-center mt-4"><p class="lead">Desarrollamos juegos entretenidos y educativos</p></div>
-                </div>
                 <!-- About Section Content-->
                 <div class="text-center mt-4">
-                    <div class="text-center mt-4"><p class="lead">Empresa de vidoejuegos de calidad</p></div>
+                    <div class="text-center mt-4"><p class="lead">Desarrollamos juegos entretenidos y educativos</p></div>
                 </div>
                 <!-- About Section Button-->
                  <!--<div class="text-center mt-4">
@@ -404,7 +405,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/MauricioFernandez.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Artista conceptual de assets del videojuego que con su gran creatividad ha logrado crear aliados y enemigos que se adaptan perfectamente en el mundo de nuestros videojuegos.</p>
+                                    <p class="mb-4">Soy diseñador con un ojo creativo y un compromiso inquebrantable con la estética visual. Mi misión es transformar mis ideas en elementos visuales cautivadores y funcionales que contribuyan a la identidad de marca y narrativa de un prooyecto.</p>
+                                    <p class="mb-4">Experiencia: diseño gráfico, ilustración digital, animación  y Motion Graphics y diseño de redes sociales.</p>
+                                    <p class="mb-4">Correo: m.fernandezr.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -436,7 +439,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/NoeliaNMaqueda.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Directora de GDD, atista conceptual y diseñadora de interfaces. Con su gran adaptabilidad y atención al detalle, se encarga en gran medida del orden del equipo y del trabajo.</p>
+                                    <p class="mb-4">Soy una diseñadora creativa y multifacética con un enfoque en la creación de experiencias visuales excepcionales para aplicaciones y juegos. Mi experiencia abarca tres áreas fundamentales: diseño de interfaz de usuario (UI), diseño y desarrollo de portfolios y creación de Game Design Document (GDD)</p>
+                                    <p class="mb-4">Experiencia: diseño de interfaces intuitivas, creación de portfolios, creación de GDDs y elaboración de diagramas de flujo.</p>
+                                    <p class="mb-4">Correo: nn.maqueda.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -468,7 +473,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Audio y mecánicas?.</p>
+                                    <p class="mb-4">Descripción.</p>
+                                    <p class="mb-4">Experiencia.</p>
+                                    <p class="mb-4">Correo: g.delatorre.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -500,7 +507,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Programación?.</p>
+                                    <p class="mb-4">Descripción.</p>
+                                    <p class="mb-4">Experiencia.</p>
+                                    <p class="mb-4">Correo: d.bermejo.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -532,7 +541,9 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Tenía que hacer redes sociales, ahora no sé.</p>
+                                    <p class="mb-4">Descripción.</p>
+                                    <p class="mb-4">Experiencia.</p>
+                                    <p class="mb-4">Correo: y.ortiz.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
