--- a/index.html
+++ b/index.html
@@ -153,20 +153,26 @@
                     <div class="row">
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-uppercase mb-4">Location</h4>
+                            <h4 class="text-uppercase mb-4">Videojuegos baratos</h4>
                             <p class="lead mb-0">
-                                2215 John Daniel Drive
+                                <!--2215 John Daniel Drive
                                 <br />
-                                Clark, MO 65243
+                                Clark, MO 65243-->
+                                Desarrollamos videojuegos que económicamente estén al alcance de todos.
                             </p>
                         </div>
                         <!-- Footer Social Icons-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-uppercase mb-4">Around the Web</h4>
-                            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                            <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                            <h4 class="text-uppercase mb-4">Compromiso de calidad</h4>
+                            <p class="lead mb-0">
+                                Nos comprometemos a ofrecer un producto innovador y de buena calidad.
+                            </p>
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-uppercase mb-4">Opciones para instituciones escolares</h4>
+                            <p class="lead mb-0">
+                                Nuestros productos vienen con paquetes especiales para ofrecer a escuelas, institutos, etc.
+                            </p>
                         </div>
                     </div>
                 </div>
