--- a/index.html
+++ b/index.html
@@ -147,13 +147,15 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Desarrollamos juegos entretenidos y educativos</p></div>
                 </div>
-
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                </div>
                 
                 <div class="container">
                     <div class="row">
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-uppercase mb-4">Videojuegos baratos</h4>
+                            <h4 class="text-center mt-4">Videojuegos baratos</h4>
                             <p class="lead mb-0">
                                 <!--2215 John Daniel Drive
                                 <br />
