--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                     <div class="row">
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Videojuegos baratos</h4>
-                            <p class="lead mb-0">
+                            <h4 class="text-uppercase mb-4">Videojuegos baratos</h4>
+                            <p class="text-center mt-4">
                                 <!--2215 John Daniel Drive
                                 <br />
                                 Clark, MO 65243-->
@@ -166,7 +166,7 @@
                         <!-- Footer Social Icons-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-uppercase mb-4">Compromiso de calidad</h4>
-                            <p class="lead mb-0">
+                            <p class="text-center mt-4">
                                 Nos comprometemos a ofrecer un producto innovador y de buena calidad.
                             </p>
                         </div>
