--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Desarrollamos juegos entretenidos y educativos</p></div>
                 </div>
-                <div class="divider-custom">
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 
