--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="row">
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-uppercase mb-4">Videojuegos baratos</h4>
+                            <h4 class="text-uppercase mb-4">Videojuegos <br/> baratos</h4>
                             <p class="text-center mt-4">
                                 <!--2215 John Daniel Drive
                                 <br />
@@ -167,14 +167,14 @@
                         </div>
                         <!-- Footer Social Icons-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-uppercase mb-4">Compromiso de calidad</h4>
+                            <h4 class="text-uppercase mb-4">Compromiso <br/> de calidad</h4>
                             <p class="text-center mt-4">
                                 Nos comprometemos a ofrecer un producto innovador y de buena calidad.
                             </p>
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-uppercase mb-4">Opciones para instituciones escolares</h4>
-                            <p class="lead mb-0">
+                            <h4 class="text-uppercase mb-4">Opciones para <br/> instituciones escolares</h4>
+                            <p class="text-center mt-4">
                                 Nuestros productos vienen con paquetes especiales para ofrecer a escuelas, institutos, etc.
                             </p>
                         </div>
