--- a/index.html
+++ b/index.html
@@ -318,8 +318,7 @@
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
-                <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-center mt-4">Redes sociales</h4>
+                <h4 class="page-section-heading text-center text-uppercase text-white">REDES SOCIALES</h4>
                     <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
